修改主题颜色，将#f42424替换成#0AADCC

--- a/themes/ecmoban_dsc/style.css
+++ b/themes/ecmoban_dsc/style.css
@@ -1571,7 +1571,7 @@ a.btn-stages:hover {
 .input-tip .strengthA b{ width:37%;}
 .input-tip .strengthB b{ width:67%;}
 .input-tip .strengthC b{ width:100%;}
-.input-tip .strengthA span{ color:#f42424;}
+.input-tip .strengthA span{ color:#0AADCC;}
 .input-tip .strengthB span{ color:#f7a530;}
 .input-tip .strengthC span{ color:#0bc756;}
 
