--- a/themes/ecmoban_dsc2017/css/style.css
+++ b/themes/ecmoban_dsc2017/css/style.css
@@ -159,7 +159,7 @@
 .full-banner{ width:1200px; margin:30px auto 0; overflow:hidden;}
 
 .floor-content{ position:relative; width:1200px; margin:0 auto;}
-.floor-line-con{ padding-top:30px; animation:fadeIn .5s;}
+.floor-line-con{ padding-top:30px; animation:fadeIn .5s; margin-bottom: 30px;}
 @keyframes fadeIn{
 	0%{ opacity:0; filter:alpha(opacity=0);}
 	100%{ opacity:1; filter:alpha(opacity=100);}	
@@ -2479,7 +2479,7 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .gp-tab li{ position:relative; float:left; width:168px; height:38px; line-height:38px; border:1px solid #fff;border-bottom-color:#0AADCC; text-align:center; color:#d2d2d2; font-size:16px; cursor:pointer;}
 .gp-tab li .iconfont{ left:28px;}
 .gp-tab li .icon-mobile-phone{ left:32px; top:11px;}
-.gp-tab li.curr{ border-color:#0AADCC; border-bottom-color:#fff; color:#0AADCC;}
+.gp-tab li.curr{ border-color:#0AADCC; border-bottom-color:#0AADCC; color:#0AADCC;}
 .gp-tab li.curr .iconfont{ color:#0AADCC;}
 .gp-warp{ display:none;}
 
@@ -3177,13 +3177,13 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .item-one-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-01.jpg) no-repeat; margin-top:26px;}
 .s-section-step .item:hover .item-one-bg{ margin-left:10px;}
 
-.item-two-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-01.jpg) no-repeat; margin-top:26px;}
+.item-two-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-02.jpg) no-repeat; margin-top:26px;}
 .s-section-step .item:hover .item-two-bg{ margin-left:10px;}
 
-.item-three-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-01.jpg) no-repeat; margin-top:26px;}
+.item-three-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-03.jpg) no-repeat; margin-top:26px;}
 .s-section-step .item:hover .item-three-bg{ margin-left:10px;}
 
-.item-four-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-01.jpg) no-repeat; margin-top:26px;}
+.item-four-bg{ display:inline-block;width:90px;height:90px; background:url(../images/header-04.jpg) no-repeat; margin-top:26px;}
 .s-section-step .item:hover .item-four-bg{ margin-left:10px;}
 
 .item-one i{ width:30px; height:35px; background-position:0 -84px;}
@@ -3413,9 +3413,9 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .gb-crazy .crazy-list li{ width: 232px; margin-right: 10px; background: #fff; float: left;}
 .gb-crazy .crazy-list .img{ display: block; margin-bottom: 5px;}
 .gb-crazy .crazy-list .img img{ width: 232px; height: 232px; }
-.gb-crazy .crazy-list .price{ color: #f43434; font-size: 21px; text-align: center; }
+.gb-crazy .crazy-list .price{ color: #0AADCC; font-size: 21px; text-align: center; }
 .gb-crazy .crazy-list .name{ display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; margin:0 10px 10px; font-size: 14px; color: #555;}
-.gb-crazy .crazy-list .crazy-btn{ height: 30px; line-height: 30px; color: #fff; background: #f43434; display: block; text-align: center; font-size: 14px; }
+.gb-crazy .crazy-list .crazy-btn{ height: 30px; line-height: 30px; color: #fff; background: #0AADCC; display: block; text-align: center; font-size: 14px; }
 .gb-crazy .crazy-list .bid_end{ background-color:#d2d2d2;}
 
 .gb-index-main{ padding: 40px 0 0; }
@@ -3424,13 +3424,13 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .gb-index-list li{ float: left; width: 212px; margin: 0 10px 10px 0; position: relative;  padding: 10px;}
 .gb-index-list .img{ display: block;}
 .gb-index-list .img img{ width: 210px; height: 210px; margin-bottom: 10px; }
-.gb-index-list .price{ float: left; color: #f43434; font-size: 21px; }
+.gb-index-list .price{ float: left; color: #0AADCC; font-size: 21px; }
 .gb-index-list .price em{ font-size: 18px; font-style: normal;}
 .gb-index-list .man{ float: right; line-height: 36px; color: #8c8c8c; }
 .gb-index-list .name{ display: block; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 14px; color: #555; }
 .gb-index-list .lefttime{ color: #8c8c8c; margin: 10px 0; }
 .gb-index-list .lefttime i,.mod-shadow-card .lefttime i{ margin-right: 5px; display:inline-block; vertical-align:middle;}
-.gb-index-list .gb-btn{ display: block; height: 30px; line-height: 30px; font-size: 14px; color: #fff; text-align: center; background: #f43434; }
+.gb-index-list .gb-btn{ display: block; height: 30px; line-height: 30px; font-size: 14px; color: #fff; text-align: center; background: #0AADCC; }
 .gb-index-list .bid_end{ background-color:#d2d2d2;}
 .gb-btn-all{ display: block; border:1px solid #d2d2d2; height: 40px; line-height: 40px; text-align: center; -webkit-transition: all .2s; -moz-transition: all .2s; -o-transition: all .2s; transition: all .2s;}
 .gb-btn-all:hover{ background: #d2d2d2; color: #555;}
@@ -3867,12 +3867,12 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .catetop-main .atwillgo-slide .bd li .p-img img{ width: 158px; height: 158px; }
 .catetop-main .atwillgo-slide .bd li .p-price{ text-align: center; margin: 10px 0; }
 .catetop-main .atwillgo-slide .bd li .p-name{ margin-bottom: 10px; font-size: 12px;  height: 54px; overflow: hidden;}
-.catetop-main .atwillgo-slide .bd li .p-btn a{ display: block; height: 28px; border: 1px solid #f43434; color: #f43434; text-align: center; line-height: 28px; font-size: 14px; transition: all .2s;}
-.catetop-main .atwillgo-slide .bd li .p-btn a:hover{ background: #f43434; color: #fff; }
+.catetop-main .atwillgo-slide .bd li .p-btn a{ display: block; height: 28px; border: 1px solid #0AADCC; color: #0AADCC; text-align: center; line-height: 28px; font-size: 14px; transition: all .2s;}
+.catetop-main .atwillgo-slide .bd li .p-btn a:hover{ background: #0AADCC; color: #fff; }
 .catetop-main .atwillgo-slide .hd{ position: relative; height: 0; }
 .catetop-main .atwillgo-slide .hd ul{ position: absolute; right: 0; top: -30px; }
 .catetop-main .atwillgo-slide .hd ul li{ float: left; height: 8px; width: 8px; border-radius: 4px; background: #9f9f9f; margin-right: 5px; transition: all .2s; cursor:pointer;}
-.catetop-main .atwillgo-slide .hd ul li.on{ width: 20px; background: #f43434;}
+.catetop-main .atwillgo-slide .hd ul li.on{ width: 20px; background: #0AADCC;}
 .catetop-main .atwillgo-slide .prev,
 .catetop-main .atwillgo-slide .next{ width: 30px; height: 70px; position: absolute; top: 50%; margin-top: -35px; background:rgba(0,0,0,.3); z-index: 2; text-align: center; color: rgba(255,255,255,.8); display: none;}
 .catetop-main .atwillgo-slide .prev{ left: 0; }
@@ -4201,8 +4201,9 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .catetop-jiadian .dsc-zoom{ border-bottom: 0 none; }
 /*tree*/
 .catetop-jiadian .nav .categorys{ width: 200px; }
-.catetop-jiadian .nav .categorys .categorys-type{ background-color: #027BD6; padding-bottom: 0;}
-.catetop-jiadian .categorys-tab-content{ background-color: #2984EB; height: 400px;}
+.catetop-jiadian .nav .categorys .categorys-type{ background-color: #2D3947; padding-bottom: 0;}
+.catetop-jiadian .nav .categorys .categorys-type a{color:#FFF; }
+.catetop-jiadian .categorys-tab-content{ background-color: #2D3947; height: 400px;}
 .catetop-jiadian .categorys-tab-content .categorys-item{ height:80px; cursor: default;}
 .catetop-jiadian .categorys-tab-content .categorys-item:hover{ background-color: #006BBC; }
 .catetop-jiadian .categorys-tab-content .item-content{ position: relative; padding: 18.5px 0; margin: 0 10px; width: 180px; background:none; border-bottom: 1px dashed #4B94E6; z-index: 2;}
@@ -4255,7 +4256,7 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .catetop-jiadian .hotrecommend .bd li .p-price{ font-size: 16px; }
 .catetop-jiadian .hotrecommend .bd li .p-name{ overflow: hidden; height: 38px; margin: 5px 0 10px;}
 .catetop-jiadian .hotrecommend .bd li .p-name a{ display:block;height: 38px;overflow: hidden;}
-.catetop-jiadian .hotrecommend .bd li .p-btn{ display: block; height: 30px; line-height: 30px; color: #fff; background: #f43434; visibility: hidden; margin: 0 -20px;}
+.catetop-jiadian .hotrecommend .bd li .p-btn{ display: block; height: 30px; line-height: 30px; color: #fff; background: #0AADCC; /* visibility: hidden;*/ margin: 0 -20px;}
 .catetop-jiadian .hotrecommend .bd li:hover .p-btn{ visibility: visible; }
 /*catetop-brand*/
 .catetop-jiadian .catetop-brand{ margin: 30px 0; }
@@ -4297,13 +4298,13 @@ a.browse:hover,a.comment:hover{ color:#0AADCC;}
 .catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .p-info{ background: #F5F9FF; padding: 14px 14px; margin-top: 20px;}
 .catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-name{ font-size: 12px; text-align: left; height: 36px; overflow: hidden; margin-bottom: 10px;}
 .catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-handle{ overflow: hidden; height: 36px; }
-.catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-handle .info-price{ float: left; color: #f43434; font-size: 21px; width: 140px; text-align: left; overflow: hidden; height: 36px;}
-.catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-handle .info-btn{ float: right; background: #f43434; color: #fff; text-align: center; height: 36px; line-height: 36px; width: 110px; }
+.catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-handle .info-price{ float: left; color: #0AADCC; font-size: 21px; width: 140px; text-align: left; overflow: hidden; height: 36px;}
+.catetop-jiadian .catetop-floor .f-bd .bd-right .fgoods-list li.first .info-handle .info-btn{ float: right; background: #0AADCC; color: #fff; text-align: center; height: 36px; line-height: 36px; width: 110px; }
 .catetop-jiadian .catetop-floor .f-bd .brands{ width: 100%; height: 70px;}
 .catetop-jiadian .catetop-floor .f-bd .brands li{width: 120px; height:70px; text-align: center; float:left; vertical-align: middle;}
 .catetop-jiadian .catetop-floor .f-bd .brands li a{display: table-cell;width: 120px;height: 70px;vertical-align: middle;}
 .catetop-jiadian .catetop-floor .f-bd .brands li img{ max-width: 80%; height: auto; }
-.catetop-jiadian .catetop-floor .f-bd .f-banner img{ max-width: 100%; height: auto; }
+.catetop-jiadian .catetop-floor .f-bd .f-banner img{ max-width: 100%; height: auto;margin-top: 13px; }
 /*lift*/
 .catetop-jiadian .catetop-main .catetop-lift-item{background: #E9E9E9; color: #555; width: 45px;}
 .catetop-jiadian .catetop-main .catetop-lift-item.catetop-lift-top{ background: #C8C8C8; color: #fff;}
